fix hero spacing, infobox spacing, actionbox alignment

--- a/styles.css
+++ b/styles.css
@@ -24,23 +24,21 @@ blockquote {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 25px;
+    gap: 50px;
 }
 
 .hero {
-    padding: 50px 90px;
+    padding: 50px 160px;
+    margin: 15px;
+    gap: 20px;
 }
 
 .top {
-    padding: 0px 90px 0px 90px; 
+        padding: 30px 160px;
 }
 
 .info {
     padding: 25px 100px 25px 100px;
-}
-
-.hero {
-    gap: 8px;
 }
 
 img {
@@ -61,7 +59,6 @@ ul {
 
 .link a {
     display: inline-block;
-    /* text-align: right; */
     padding: 16px;
     text-decoration: none;
     color: #f9faf3;
@@ -146,6 +143,9 @@ button,
 
 .quote {
     background-color: #e5e7eb;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 blockquote {
@@ -153,20 +153,24 @@ blockquote {
     color: #1f2937;
     font-style: italic;
     font-weight: 300;
-    padding: 150px;
+    padding: 150px 300px 0 300px;
 }
 
 .quote p {
     font-size: 18px;
     font-weight: bold;
-    padding: 0 100px;
+    padding: 15px 300px 150px 0;
     text-align: end;
 }
 
 .actionbox {
-    padding: 30px 175px;
+    padding: 30px 160px;
     margin: 50px;
     border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 150px;
 }
 
 .footer {
